--- a/journal/modernized/03-testimony.adoc
+++ b/journal/modernized/03-testimony.adoc
@@ -120,15 +120,21 @@ The preceding memorial was read and approved by Upper
 Evesham Monthly meeting of men and women Friends,
 held Third month 12th, 1831, and directed to be signed on behalf thereof, by
 
+[.signed-section-signature]
 John N. Reeve,
 
+[.signed-section-signature]
 Priscilla W. Reeve, Clerks.
 
+[.signed-section-context-close]
 Read and approved in Haddonfield Quarterly meeting.
 Third month 17th, 1831.
 
+[.signed-section-closing]
 Signed on behalf thereof,
 
+[.signed-section-signature]
 David Roberts,
 
+[.signed-section-signature]
 Sarah Nicholson, Clerks.
