--- a/journal/modernized/03-testimony.adoc
+++ b/journal/modernized/03-testimony.adoc
@@ -98,7 +98,7 @@ for which she had been careful to wait.
 In the course of the illness which immediately preceded her final change,
 she was preserved in patience and resignation,
 manifesting a willingness to fill up her measure of suffering,
-often expressing she had no desire respecting the issue of her disease,
+often expressing she had no desire respecting the final outcome of her disease,
 and could adopt the language of the apostle, "`For me to live is Christ,
 and to die is gain.`"
 Her spirit was so clothed with peace and love, that the influence thereof,
